# ECE268_GPU_GIFT_PRESENT

./: README.md  run.sh  run_tests.sh
cpu/: CMakeLists.txt  README.md  run_cpu.sh  run_tests.sh
cpu/aes/: Makefile  aes.hpp  aes_cbc  aes_cbc.cpp  aes_ctr  aes_ctr.cpp  test_cbc.sh  test_ctr.sh
cpu/aes/tests/: beemovie.enc  test1-1-padded.enc  test1-2-padded.enc  test1-2.enc  test2-1-padded.dec  test2-1-padded.enc  test2-1.enc  test2-2-padded.enc  test2-2.enc  test_cbc.sh  test_ctr.sh
cpu/gift/: Makefile  gift.hpp  gift_cbc  gift_cbc.cpp  gift_ctr  gift_ctr.cpp  test_cbc.sh  test_ctr.sh
cpu/gift/tests/: beemovie.enc  beemovie.txt  test1-1-padded.enc  test1-1.enc  test1-2-padded.enc  test1-2.enc  test2-1-padded.enc  test2-1.enc  test2-2-padded.enc  test2-2.enc  test_cbc.sh  test_ctr.sh
cpu/present/: Makefile  present.hpp  present_cbc  present_cbc.cpp  present_ctr  present_ctr.cpp  test_cbc.sh  test_ctr.sh
cpu/present/tests/: beemovie.enc  test1-1-padded.enc  test1-1.enc  test1-2-padded.enc  test1-2.enc  test2-1-padded.enc  test2-1.enc  test2-2-padded.enc  test2-2.enc  test_cbc.sh  test_ctr.sh
gpu/: CMakeLists.txt  README.md  run.sh  run_gpu.sh  run_tests.sh
gpu/aes/: aes.cuh  aes_cbc.cu  aes_ctr.cu  test_cbc.sh  test_ctr.sh
gpu/gift/: gift.cuh  gift128_t_tables.cuh  gift_cbc.cu  gift_ctr.cu  test_cbc.sh  test_ctr.sh
gpu/present/: present.cuh  present_cbc.cu  present_ctr.cu  test_cbc.sh  test_ctr.sh
gpu/utils/: example.cu  findgpu.cu  gpu_info.cuh  gpu_transfer.cuh  t_generator.cpp  t_generator_GIFT.cpp  t_tables.cuh  timer.hpp
test_data/gift/: vector_generator.py
test_data/present/: vector_generator.py
tests/: gen_test_file.py
